Fix missing scrollbars

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -16,14 +16,16 @@ html, body {
   margin: 0;
   position: relative;
   height: 100%;
+  width: 100%;
   background-color: $main-background-color;
   font-family: $font-family;
 }
 
 .layout-fill {
-  margin: 0;
+  margin: 0; padding: 0;
   max-height: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 .layout-padding {
